feat: force xmx 1024m