@@ -6,7 +6,7 @@ buildType=${3:-cdvBuildRelease}
 
 export JAVA_HOME=$(java -XshowSettings:properties -version 2>&1 > /dev/null | grep 'java.home' |cut -d '=' -f 2 |xargs)
 export ANDROID_HOME=/home/builds/android-sdk
-export GRADLE_OPTS=-Dorg.gradle.daemon=false
+export GRADLE_OPTS="-Xmx1024m -Xms1024m -XX:MaxPermSize=1024m -Dorg.gradle.daemon=false"
 
 cd "./$folder"
 
